compil-docker/projects/Compilador-Simples/sintatico.output
Grammar

    0 $accept: programa $end

    1 $@1: %empty

    2 programa: cabecalho variaveis $@1 T_INICIO lista_comandos T_FIM

    3 cabecalho: T_PROGRAMA T_IDENTIF

    4 variaveis: %empty
    5          | declaracao_variaveis

    6 declaracao_variaveis: tipo lista_variaveis declaracao_variaveis
    7                     | tipo lista_variaveis

    8 tipo: T_INTEIRO
    9     | T_LOGICO

   10 lista_variaveis: lista_variaveis variavel
   11                | variavel

   12 $@2: %empty

   13 variavel: T_IDENTIF $@2 tamanho

   14 tamanho: %empty

   15 $@3: %empty

   16 tamanho: T_INICIO_VETOR T_NUMERO $@3 T_FIM_VETOR

   17 lista_comandos: %empty
   18               | comando lista_comandos

   19 comando: leitura
   20        | escrita
   21        | repita
   22        | repeticao
   23        | selecao
   24        | atribuicao

   25 $@4: %empty

   26 leitura: T_LEIA T_IDENTIF $@4 posicao

   27 escrita: T_ESCREVA expr

   28 $@5: %empty

   29 $@6: %empty

   30 repeticao: T_ENQTO $@5 expr T_FACA $@6 lista_comandos T_FIMENQTO

   31 $@7: %empty

   32 $@8: %empty

   33 repita: T_REPITA $@7 lista_comandos T_ATE $@8 expr T_FIMREPITA

   34 $@9: %empty

   35 $@10: %empty

   36 selecao: T_SE expr T_ENTAO $@9 lista_comandos T_SENAO $@10 lista_comandos T_FIMSE

   37 $@11: %empty

   38 atribuicao: T_IDENTIF $@11 posicaoAux T_ATRIB expr

   39 expr: expr T_VEZES expr
   40     | expr T_DIV expr
   41     | expr T_MAIS expr
   42     | expr T_MENOS expr
   43     | expr T_MAIOR expr
   44     | expr T_MENOR expr
   45     | expr T_IGUAL expr
   46     | expr T_E expr
   47     | expr T_OU expr
   48     | termo

   49 indice: %empty
   50       | T_INICIO_VETOR expr T_FIM_VETOR

   51 posicao: %empty

   52 $@12: %empty

   53 posicao: T_INICIO_VETOR expr $@12 T_FIM_VETOR

   54 posicaoAux: %empty

   55 $@13: %empty

   56 posicaoAux: T_INICIO_VETOR expr $@13 T_FIM_VETOR

   57 termo: T_IDENTIF indice
   58      | T_NUMERO
   59      | T_V
   60      | T_F
   61      | T_NAO termo
   62      | T_ABRE expr T_FECHA


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    T_PROGRAMA (258) 3
    T_FIM (259) 2
    T_LEIA (260) 26
    T_INICIO (261) 2
    T_ESCREVA (262) 27
    T_SE (263) 36
    T_ENTAO (264) 36
    T_SENAO (265) 36
    T_FIMSE (266) 36
    T_ENQTO (267) 30
    T_FIMENQTO (268) 30
    T_FACA (269) 30
    T_REPITA (270) 33
    T_ATE (271) 33
    T_FIMREPITA (272) 33
    T_INTEIRO (273) 8
    T_LOGICO (274) 9
    T_V (275) 59
    T_F (276) 60
    T_MAIS (277) 41
    T_MENOS (278) 42
    T_VEZES (279) 39
    T_E (280) 46
    T_OU (281) 47
    T_NAO (282) 61
    T_MAIOR (283) 43
    T_MENOR (284) 44
    T_ATRIB (285) 38
    T_ABRE (286) 62
    T_FECHA (287) 62
    T_IDENTIF (288) 3 13 26 38 57
    T_NUMERO (289) 16 58
    T_INICIO_VETOR (290) 16 50 53 56
    T_FIM_VETOR (291) 16 50 53 56
    T_IGUAL (292) 45
    T_DIV (293) 40


Nonterminals, with rules where they appear

    $accept (39)
        on left: 0
    programa (40)
        on left: 2
        on right: 0
    $@1 (41)
        on left: 1
        on right: 2
    cabecalho (42)
        on left: 3
        on right: 2
    variaveis (43)
        on left: 4 5
        on right: 2
    declaracao_variaveis (44)
        on left: 6 7
        on right: 5 6
    tipo (45)
        on left: 8 9
        on right: 6 7
    lista_variaveis (46)
        on left: 10 11
        on right: 6 7 10
    variavel (47)
        on left: 13
        on right: 10 11
    $@2 (48)
        on left: 12
        on right: 13
    tamanho (49)
        on left: 14 16
        on right: 13
    $@3 (50)
        on left: 15
        on right: 16
    lista_comandos (51)
        on left: 17 18
        on right: 2 18 30 33 36
    comando (52)
        on left: 19 20 21 22 23 24
        on right: 18
    leitura (53)
        on left: 26
        on right: 19
    $@4 (54)
        on left: 25
        on right: 26
    escrita (55)
        on left: 27
        on right: 20
    repeticao (56)
        on left: 30
        on right: 22
    $@5 (57)
        on left: 28
        on right: 30
    $@6 (58)
        on left: 29
        on right: 30
    repita (59)
        on left: 33
        on right: 21
    $@7 (60)
        on left: 31
        on right: 33
    $@8 (61)
        on left: 32
        on right: 33
    selecao (62)
        on left: 36
        on right: 23
    $@9 (63)
        on left: 34
        on right: 36
    $@10 (64)
        on left: 35
        on right: 36
    atribuicao (65)
        on left: 38
        on right: 24
    $@11 (66)
        on left: 37
        on right: 38
    expr (67)
        on left: 39 40 41 42 43 44 45 46 47 48
        on right: 27 30 33 36 38 39 40 41 42 43 44 45 46 47 50 53 56 62
    indice (68)
        on left: 49 50
        on right: 57
    posicao (69)
        on left: 51 53
        on right: 26
    $@12 (70)
        on left: 52
        on right: 53
    posicaoAux (71)
        on left: 54 56
        on right: 38
    $@13 (72)
        on left: 55
        on right: 56
    termo (73)
        on left: 57 58 59 60 61 62
        on right: 48 61


State 0

    0 $accept: . programa $end

    T_PROGRAMA  shift, and go to state 1

    programa   go to state 2
    cabecalho  go to state 3


State 1

    3 cabecalho: T_PROGRAMA . T_IDENTIF

    T_IDENTIF  shift, and go to state 4


State 2

    0 $accept: programa . $end

    $end  shift, and go to state 5


State 3

    2 programa: cabecalho . variaveis $@1 T_INICIO lista_comandos T_FIM

    T_INTEIRO  shift, and go to state 6
    T_LOGICO   shift, and go to state 7

    $default  reduce using rule 4 (variaveis)

    variaveis             go to state 8
    declaracao_variaveis  go to state 9
    tipo                  go to state 10


State 4

    3 cabecalho: T_PROGRAMA T_IDENTIF .

    $default  reduce using rule 3 (cabecalho)


State 5

    0 $accept: programa $end .

    $default  accept


State 6

    8 tipo: T_INTEIRO .

    $default  reduce using rule 8 (tipo)


State 7

    9 tipo: T_LOGICO .

    $default  reduce using rule 9 (tipo)


State 8

    2 programa: cabecalho variaveis . $@1 T_INICIO lista_comandos T_FIM

    $default  reduce using rule 1 ($@1)

    $@1  go to state 11


State 9

    5 variaveis: declaracao_variaveis .

    $default  reduce using rule 5 (variaveis)


State 10

    6 declaracao_variaveis: tipo . lista_variaveis declaracao_variaveis
    7                     | tipo . lista_variaveis

    T_IDENTIF  shift, and go to state 12

    lista_variaveis  go to state 13
    variavel         go to state 14


State 11

    2 programa: cabecalho variaveis $@1 . T_INICIO lista_comandos T_FIM

    T_INICIO  shift, and go to state 15


State 12

   13 variavel: T_IDENTIF . $@2 tamanho

    $default  reduce using rule 12 ($@2)

    $@2  go to state 16


State 13

    6 declaracao_variaveis: tipo lista_variaveis . declaracao_variaveis
    7                     | tipo lista_variaveis .
   10 lista_variaveis: lista_variaveis . variavel

    T_INTEIRO  shift, and go to state 6
    T_LOGICO   shift, and go to state 7
    T_IDENTIF  shift, and go to state 12

    $default  reduce using rule 7 (declaracao_variaveis)

    declaracao_variaveis  go to state 17
    tipo                  go to state 10
    variavel              go to state 18


State 14

   11 lista_variaveis: variavel .

    $default  reduce using rule 11 (lista_variaveis)


State 15

    2 programa: cabecalho variaveis $@1 T_INICIO . lista_comandos T_FIM

    T_LEIA     shift, and go to state 19
    T_ESCREVA  shift, and go to state 20
    T_SE       shift, and go to state 21
    T_ENQTO    shift, and go to state 22
    T_REPITA   shift, and go to state 23
    T_IDENTIF  shift, and go to state 24

    $default  reduce using rule 17 (lista_comandos)

    lista_comandos  go to state 25
    comando         go to state 26
    leitura         go to state 27
    escrita         go to state 28
    repeticao       go to state 29
    repita          go to state 30
    selecao         go to state 31
    atribuicao      go to state 32


State 16

   13 variavel: T_IDENTIF $@2 . tamanho

    T_INICIO_VETOR  shift, and go to state 33

    $default  reduce using rule 14 (tamanho)

    tamanho  go to state 34


State 17

    6 declaracao_variaveis: tipo lista_variaveis declaracao_variaveis .

    $default  reduce using rule 6 (declaracao_variaveis)


State 18

   10 lista_variaveis: lista_variaveis variavel .

    $default  reduce using rule 10 (lista_variaveis)


State 19

   26 leitura: T_LEIA . T_IDENTIF $@4 posicao

    T_IDENTIF  shift, and go to state 35


State 20

   27 escrita: T_ESCREVA . expr

    T_V        shift, and go to state 36
    T_F        shift, and go to state 37
    T_NAO      shift, and go to state 38
    T_ABRE     shift, and go to state 39
    T_IDENTIF  shift, and go to state 40
    T_NUMERO   shift, and go to state 41

    expr   go to state 42
    termo  go to state 43


State 21

   36 selecao: T_SE . expr T_ENTAO $@9 lista_comandos T_SENAO $@10 lista_comandos T_FIMSE

    T_V        shift, and go to state 36
    T_F        shift, and go to state 37
    T_NAO      shift, and go to state 38
    T_ABRE     shift, and go to state 39
    T_IDENTIF  shift, and go to state 40
    T_NUMERO   shift, and go to state 41

    expr   go to state 44
    termo  go to state 43


State 22

   30 repeticao: T_ENQTO . $@5 expr T_FACA $@6 lista_comandos T_FIMENQTO

    $default  reduce using rule 28 ($@5)

    $@5  go to state 45


State 23

   33 repita: T_REPITA . $@7 lista_comandos T_ATE $@8 expr T_FIMREPITA

    $default  reduce using rule 31 ($@7)

    $@7  go to state 46


State 24

   38 atribuicao: T_IDENTIF . $@11 posicaoAux T_ATRIB expr

    $default  reduce using rule 37 ($@11)

    $@11  go to state 47


State 25

    2 programa: cabecalho variaveis $@1 T_INICIO lista_comandos . T_FIM

    T_FIM  shift, and go to state 48


State 26

   18 lista_comandos: comando . lista_comandos

    T_LEIA     shift, and go to state 19
    T_ESCREVA  shift, and go to state 20
    T_SE       shift, and go to state 21
    T_ENQTO    shift, and go to state 22
    T_REPITA   shift, and go to state 23
    T_IDENTIF  shift, and go to state 24

    $default  reduce using rule 17 (lista_comandos)

    lista_comandos  go to state 49
    comando         go to state 26
    leitura         go to state 27
    escrita         go to state 28
    repeticao       go to state 29
    repita          go to state 30
    selecao         go to state 31
    atribuicao      go to state 32


State 27

   19 comando: leitura .

    $default  reduce using rule 19 (comando)


State 28

   20 comando: escrita .

    $default  reduce using rule 20 (comando)


State 29

   22 comando: repeticao .

    $default  reduce using rule 22 (comando)


State 30

   21 comando: repita .

    $default  reduce using rule 21 (comando)


State 31

   23 comando: selecao .

    $default  reduce using rule 23 (comando)


State 32

   24 comando: atribuicao .

    $default  reduce using rule 24 (comando)


State 33

   16 tamanho: T_INICIO_VETOR . T_NUMERO $@3 T_FIM_VETOR

    T_NUMERO  shift, and go to state 50


State 34

   13 variavel: T_IDENTIF $@2 tamanho .

    $default  reduce using rule 13 (variavel)


State 35

   26 leitura: T_LEIA T_IDENTIF . $@4 posicao

    $default  reduce using rule 25 ($@4)

    $@4  go to state 51


State 36

   59 termo: T_V .

    $default  reduce using rule 59 (termo)


State 37

   60 termo: T_F .

    $default  reduce using rule 60 (termo)


State 38

   61 termo: T_NAO . termo

    T_V        shift, and go to state 36
    T_F        shift, and go to state 37
    T_NAO      shift, and go to state 38
    T_ABRE     shift, and go to state 39
    T_IDENTIF  shift, and go to state 40
    T_NUMERO   shift, and go to state 41

    termo  go to state 52


State 39

   62 termo: T_ABRE . expr T_FECHA

    T_V        shift, and go to state 36
    T_F        shift, and go to state 37
    T_NAO      shift, and go to state 38
    T_ABRE     shift, and go to state 39
    T_IDENTIF  shift, and go to state 40
    T_NUMERO   shift, and go to state 41

    expr   go to state 53
    termo  go to state 43


State 40

   57 termo: T_IDENTIF . indice

    T_INICIO_VETOR  shift, and go to state 54

    $default  reduce using rule 49 (indice)

    indice  go to state 55


State 41

   58 termo: T_NUMERO .

    $default  reduce using rule 58 (termo)


State 42

   27 escrita: T_ESCREVA expr .
   39 expr: expr . T_VEZES expr
   40     | expr . T_DIV expr
   41     | expr . T_MAIS expr
   42     | expr . T_MENOS expr
   43     | expr . T_MAIOR expr
   44     | expr . T_MENOR expr
   45     | expr . T_IGUAL expr
   46     | expr . T_E expr
   47     | expr . T_OU expr

    T_MAIS   shift, and go to state 56
    T_MENOS  shift, and go to state 57
    T_VEZES  shift, and go to state 58
    T_E      shift, and go to state 59
    T_OU     shift, and go to state 60
    T_MAIOR  shift, and go to state 61
    T_MENOR  shift, and go to state 62
    T_IGUAL  shift, and go to state 63
    T_DIV    shift, and go to state 64

    $default  reduce using rule 27 (escrita)


State 43

   48 expr: termo .

    $default  reduce using rule 48 (expr)


State 44

   36 selecao: T_SE expr . T_ENTAO $@9 lista_comandos T_SENAO $@10 lista_comandos T_FIMSE
   39 expr: expr . T_VEZES expr
   40     | expr . T_DIV expr
   41     | expr . T_MAIS expr
   42     | expr . T_MENOS expr
   43     | expr . T_MAIOR expr
   44     | expr . T_MENOR expr
   45     | expr . T_IGUAL expr
   46     | expr . T_E expr
   47     | expr . T_OU expr

    T_ENTAO  shift, and go to state 65
    T_MAIS   shift, and go to state 56
    T_MENOS  shift, and go to state 57
    T_VEZES  shift, and go to state 58
    T_E      shift, and go to state 59
    T_OU     shift, and go to state 60
    T_MAIOR  shift, and go to state 61
    T_MENOR  shift, and go to state 62
    T_IGUAL  shift, and go to state 63
    T_DIV    shift, and go to state 64


State 45

   30 repeticao: T_ENQTO $@5 . expr T_FACA $@6 lista_comandos T_FIMENQTO

    T_V        shift, and go to state 36
    T_F        shift, and go to state 37
    T_NAO      shift, and go to state 38
    T_ABRE     shift, and go to state 39
    T_IDENTIF  shift, and go to state 40
    T_NUMERO   shift, and go to state 41

    expr   go to state 66
    termo  go to state 43


State 46

   33 repita: T_REPITA $@7 . lista_comandos T_ATE $@8 expr T_FIMREPITA

    T_LEIA     shift, and go to state 19
    T_ESCREVA  shift, and go to state 20
    T_SE       shift, and go to state 21
    T_ENQTO    shift, and go to state 22
    T_REPITA   shift, and go to state 23
    T_IDENTIF  shift, and go to state 24

    $default  reduce using rule 17 (lista_comandos)

    lista_comandos  go to state 67
    comando         go to state 26
    leitura         go to state 27
    escrita         go to state 28
    repeticao       go to state 29
    repita          go to state 30
    selecao         go to state 31
    atribuicao      go to state 32


State 47

   38 atribuicao: T_IDENTIF $@11 . posicaoAux T_ATRIB expr

    T_INICIO_VETOR  shift, and go to state 68

    $default  reduce using rule 54 (posicaoAux)

    posicaoAux  go to state 69


State 48

    2 programa: cabecalho variaveis $@1 T_INICIO lista_comandos T_FIM .

    $default  reduce using rule 2 (programa)


State 49

   18 lista_comandos: comando lista_comandos .

    $default  reduce using rule 18 (lista_comandos)


State 50

   16 tamanho: T_INICIO_VETOR T_NUMERO . $@3 T_FIM_VETOR

    $default  reduce using rule 15 ($@3)

    $@3  go to state 70


State 51

   26 leitura: T_LEIA T_IDENTIF $@4 . posicao

    T_INICIO_VETOR  shift, and go to state 71

    $default  reduce using rule 51 (posicao)

    posicao  go to state 72


State 52

   61 termo: T_NAO termo .

    $default  reduce using rule 61 (termo)


State 53

   39 expr: expr . T_VEZES expr
   40     | expr . T_DIV expr
   41     | expr . T_MAIS expr
   42     | expr . T_MENOS expr
   43     | expr . T_MAIOR expr
   44     | expr . T_MENOR expr
   45     | expr . T_IGUAL expr
   46     | expr . T_E expr
   47     | expr . T_OU expr
   62 termo: T_ABRE expr . T_FECHA

    T_MAIS   shift, and go to state 56
    T_MENOS  shift, and go to state 57
    T_VEZES  shift, and go to state 58
    T_E      shift, and go to state 59
    T_OU     shift, and go to state 60
    T_MAIOR  shift, and go to state 61
    T_MENOR  shift, and go to state 62
    T_FECHA  shift, and go to state 73
    T_IGUAL  shift, and go to state 63
    T_DIV    shift, and go to state 64


State 54

   50 indice: T_INICIO_VETOR . expr T_FIM_VETOR

    T_V        shift, and go to state 36
    T_F        shift, and go to state 37
    T_NAO      shift, and go to state 38
    T_ABRE     shift, and go to state 39
    T_IDENTIF  shift, and go to state 40
    T_NUMERO   shift, and go to state 41

    expr   go to state 74
    termo  go to state 43


State 55

   57 termo: T_IDENTIF indice .

    $default  reduce using rule 57 (termo)


State 56

   41 expr: expr T_MAIS . expr

    T_V        shift, and go to state 36
    T_F        shift, and go to state 37
    T_NAO      shift, and go to state 38
    T_ABRE     shift, and go to state 39
    T_IDENTIF  shift, and go to state 40
    T_NUMERO   shift, and go to state 41

    expr   go to state 75
    termo  go to state 43


State 57

   42 expr: expr T_MENOS . expr

    T_V        shift, and go to state 36
    T_F        shift, and go to state 37
    T_NAO      shift, and go to state 38
    T_ABRE     shift, and go to state 39
    T_IDENTIF  shift, and go to state 40
    T_NUMERO   shift, and go to state 41

    expr   go to state 76
    termo  go to state 43


State 58

   39 expr: expr T_VEZES . expr

    T_V        shift, and go to state 36
    T_F        shift, and go to state 37
    T_NAO      shift, and go to state 38
    T_ABRE     shift, and go to state 39
    T_IDENTIF  shift, and go to state 40
    T_NUMERO   shift, and go to state 41

    expr   go to state 77
    termo  go to state 43


State 59

   46 expr: expr T_E . expr

    T_V        shift, and go to state 36
    T_F        shift, and go to state 37
    T_NAO      shift, and go to state 38
    T_ABRE     shift, and go to state 39
    T_IDENTIF  shift, and go to state 40
    T_NUMERO   shift, and go to state 41

    expr   go to state 78
    termo  go to state 43


State 60

   47 expr: expr T_OU . expr

    T_V        shift, and go to state 36
    T_F        shift, and go to state 37
    T_NAO      shift, and go to state 38
    T_ABRE     shift, and go to state 39
    T_IDENTIF  shift, and go to state 40
    T_NUMERO   shift, and go to state 41

    expr   go to state 79
    termo  go to state 43


State 61

   43 expr: expr T_MAIOR . expr

    T_V        shift, and go to state 36
    T_F        shift, and go to state 37
    T_NAO      shift, and go to state 38
    T_ABRE     shift, and go to state 39
    T_IDENTIF  shift, and go to state 40
    T_NUMERO   shift, and go to state 41

    expr   go to state 80
    termo  go to state 43


State 62

   44 expr: expr T_MENOR . expr

    T_V        shift, and go to state 36
    T_F        shift, and go to state 37
    T_NAO      shift, and go to state 38
    T_ABRE     shift, and go to state 39
    T_IDENTIF  shift, and go to state 40
    T_NUMERO   shift, and go to state 41

    expr   go to state 81
    termo  go to state 43


State 63

   45 expr: expr T_IGUAL . expr

    T_V        shift, and go to state 36
    T_F        shift, and go to state 37
    T_NAO      shift, and go to state 38
    T_ABRE     shift, and go to state 39
    T_IDENTIF  shift, and go to state 40
    T_NUMERO   shift, and go to state 41

    expr   go to state 82
    termo  go to state 43


State 64

   40 expr: expr T_DIV . expr

    T_V        shift, and go to state 36
    T_F        shift, and go to state 37
    T_NAO      shift, and go to state 38
    T_ABRE     shift, and go to state 39
    T_IDENTIF  shift, and go to state 40
    T_NUMERO   shift, and go to state 41

    expr   go to state 83
    termo  go to state 43


State 65

   36 selecao: T_SE expr T_ENTAO . $@9 lista_comandos T_SENAO $@10 lista_comandos T_FIMSE

    $default  reduce using rule 34 ($@9)

    $@9  go to state 84


State 66

   30 repeticao: T_ENQTO $@5 expr . T_FACA $@6 lista_comandos T_FIMENQTO
   39 expr: expr . T_VEZES expr
   40     | expr . T_DIV expr
   41     | expr . T_MAIS expr
   42     | expr . T_MENOS expr
   43     | expr . T_MAIOR expr
   44     | expr . T_MENOR expr
   45     | expr . T_IGUAL expr
   46     | expr . T_E expr
   47     | expr . T_OU expr

    T_FACA   shift, and go to state 85
    T_MAIS   shift, and go to state 56
    T_MENOS  shift, and go to state 57
    T_VEZES  shift, and go to state 58
    T_E      shift, and go to state 59
    T_OU     shift, and go to state 60
    T_MAIOR  shift, and go to state 61
    T_MENOR  shift, and go to state 62
    T_IGUAL  shift, and go to state 63
    T_DIV    shift, and go to state 64


State 67

   33 repita: T_REPITA $@7 lista_comandos . T_ATE $@8 expr T_FIMREPITA

    T_ATE  shift, and go to state 86


State 68

   56 posicaoAux: T_INICIO_VETOR . expr $@13 T_FIM_VETOR

    T_V        shift, and go to state 36
    T_F        shift, and go to state 37
    T_NAO      shift, and go to state 38
    T_ABRE     shift, and go to state 39
    T_IDENTIF  shift, and go to state 40
    T_NUMERO   shift, and go to state 41

    expr   go to state 87
    termo  go to state 43


State 69

   38 atribuicao: T_IDENTIF $@11 posicaoAux . T_ATRIB expr

    T_ATRIB  shift, and go to state 88


State 70

   16 tamanho: T_INICIO_VETOR T_NUMERO $@3 . T_FIM_VETOR

    T_FIM_VETOR  shift, and go to state 89


State 71

   53 posicao: T_INICIO_VETOR . expr $@12 T_FIM_VETOR

    T_V        shift, and go to state 36
    T_F        shift, and go to state 37
    T_NAO      shift, and go to state 38
    T_ABRE     shift, and go to state 39
    T_IDENTIF  shift, and go to state 40
    T_NUMERO   shift, and go to state 41

    expr   go to state 90
    termo  go to state 43


State 72

   26 leitura: T_LEIA T_IDENTIF $@4 posicao .

    $default  reduce using rule 26 (leitura)


State 73

   62 termo: T_ABRE expr T_FECHA .

    $default  reduce using rule 62 (termo)


State 74

   39 expr: expr . T_VEZES expr
   40     | expr . T_DIV expr
   41     | expr . T_MAIS expr
   42     | expr . T_MENOS expr
   43     | expr . T_MAIOR expr
   44     | expr . T_MENOR expr
   45     | expr . T_IGUAL expr
   46     | expr . T_E expr
   47     | expr . T_OU expr
   50 indice: T_INICIO_VETOR expr . T_FIM_VETOR

    T_MAIS       shift, and go to state 56
    T_MENOS      shift, and go to state 57
    T_VEZES      shift, and go to state 58
    T_E          shift, and go to state 59
    T_OU         shift, and go to state 60
    T_MAIOR      shift, and go to state 61
    T_MENOR      shift, and go to state 62
    T_FIM_VETOR  shift, and go to state 91
    T_IGUAL      shift, and go to state 63
    T_DIV        shift, and go to state 64


State 75

   39 expr: expr . T_VEZES expr
   40     | expr . T_DIV expr
   41     | expr . T_MAIS expr
   41     | expr T_MAIS expr .
   42     | expr . T_MENOS expr
   43     | expr . T_MAIOR expr
   44     | expr . T_MENOR expr
   45     | expr . T_IGUAL expr
   46     | expr . T_E expr
   47     | expr . T_OU expr

    T_VEZES  shift, and go to state 58
    T_DIV    shift, and go to state 64

    $default  reduce using rule 41 (expr)


State 76

   39 expr: expr . T_VEZES expr
   40     | expr . T_DIV expr
   41     | expr . T_MAIS expr
   42     | expr . T_MENOS expr
   42     | expr T_MENOS expr .
   43     | expr . T_MAIOR expr
   44     | expr . T_MENOR expr
   45     | expr . T_IGUAL expr
   46     | expr . T_E expr
   47     | expr . T_OU expr

    T_VEZES  shift, and go to state 58
    T_DIV    shift, and go to state 64

    $default  reduce using rule 42 (expr)


State 77

   39 expr: expr . T_VEZES expr
   39     | expr T_VEZES expr .
   40     | expr . T_DIV expr
   41     | expr . T_MAIS expr
   42     | expr . T_MENOS expr
   43     | expr . T_MAIOR expr
   44     | expr . T_MENOR expr
   45     | expr . T_IGUAL expr
   46     | expr . T_E expr
   47     | expr . T_OU expr

    $default  reduce using rule 39 (expr)


State 78

   39 expr: expr . T_VEZES expr
   40     | expr . T_DIV expr
   41     | expr . T_MAIS expr
   42     | expr . T_MENOS expr
   43     | expr . T_MAIOR expr
   44     | expr . T_MENOR expr
   45     | expr . T_IGUAL expr
   46     | expr . T_E expr
   46     | expr T_E expr .
   47     | expr . T_OU expr

    T_MAIS   shift, and go to state 56
    T_MENOS  shift, and go to state 57
    T_VEZES  shift, and go to state 58
    T_MAIOR  shift, and go to state 61
    T_MENOR  shift, and go to state 62
    T_IGUAL  shift, and go to state 63
    T_DIV    shift, and go to state 64

    $default  reduce using rule 46 (expr)


State 79

   39 expr: expr . T_VEZES expr
   40     | expr . T_DIV expr
   41     | expr . T_MAIS expr
   42     | expr . T_MENOS expr
   43     | expr . T_MAIOR expr
   44     | expr . T_MENOR expr
   45     | expr . T_IGUAL expr
   46     | expr . T_E expr
   47     | expr . T_OU expr
   47     | expr T_OU expr .

    T_MAIS   shift, and go to state 56
    T_MENOS  shift, and go to state 57
    T_VEZES  shift, and go to state 58
    T_MAIOR  shift, and go to state 61
    T_MENOR  shift, and go to state 62
    T_IGUAL  shift, and go to state 63
    T_DIV    shift, and go to state 64

    $default  reduce using rule 47 (expr)


State 80

   39 expr: expr . T_VEZES expr
   40     | expr . T_DIV expr
   41     | expr . T_MAIS expr
   42     | expr . T_MENOS expr
   43     | expr . T_MAIOR expr
   43     | expr T_MAIOR expr .
   44     | expr . T_MENOR expr
   45     | expr . T_IGUAL expr
   46     | expr . T_E expr
   47     | expr . T_OU expr

    T_MAIS   shift, and go to state 56
    T_MENOS  shift, and go to state 57
    T_VEZES  shift, and go to state 58
    T_DIV    shift, and go to state 64

    $default  reduce using rule 43 (expr)


State 81

   39 expr: expr . T_VEZES expr
   40     | expr . T_DIV expr
   41     | expr . T_MAIS expr
   42     | expr . T_MENOS expr
   43     | expr . T_MAIOR expr
   44     | expr . T_MENOR expr
   44     | expr T_MENOR expr .
   45     | expr . T_IGUAL expr
   46     | expr . T_E expr
   47     | expr . T_OU expr

    T_MAIS   shift, and go to state 56
    T_MENOS  shift, and go to state 57
    T_VEZES  shift, and go to state 58
    T_DIV    shift, and go to state 64

    $default  reduce using rule 44 (expr)


State 82

   39 expr: expr . T_VEZES expr
   40     | expr . T_DIV expr
   41     | expr . T_MAIS expr
   42     | expr . T_MENOS expr
   43     | expr . T_MAIOR expr
   44     | expr . T_MENOR expr
   45     | expr . T_IGUAL expr
   45     | expr T_IGUAL expr .
   46     | expr . T_E expr
   47     | expr . T_OU expr

    T_MAIS   shift, and go to state 56
    T_MENOS  shift, and go to state 57
    T_VEZES  shift, and go to state 58
    T_MAIOR  shift, and go to state 61
    T_MENOR  shift, and go to state 62
    T_DIV    shift, and go to state 64

    $default  reduce using rule 45 (expr)


State 83

   39 expr: expr . T_VEZES expr
   40     | expr . T_DIV expr
   40     | expr T_DIV expr .
   41     | expr . T_MAIS expr
   42     | expr . T_MENOS expr
   43     | expr . T_MAIOR expr
   44     | expr . T_MENOR expr
   45     | expr . T_IGUAL expr
   46     | expr . T_E expr
   47     | expr . T_OU expr

    $default  reduce using rule 40 (expr)


State 84

   36 selecao: T_SE expr T_ENTAO $@9 . lista_comandos T_SENAO $@10 lista_comandos T_FIMSE

    T_LEIA     shift, and go to state 19
    T_ESCREVA  shift, and go to state 20
    T_SE       shift, and go to state 21
    T_ENQTO    shift, and go to state 22
    T_REPITA   shift, and go to state 23
    T_IDENTIF  shift, and go to state 24

    $default  reduce using rule 17 (lista_comandos)

    lista_comandos  go to state 92
    comando         go to state 26
    leitura         go to state 27
    escrita         go to state 28
    repeticao       go to state 29
    repita          go to state 30
    selecao         go to state 31
    atribuicao      go to state 32


State 85

   30 repeticao: T_ENQTO $@5 expr T_FACA . $@6 lista_comandos T_FIMENQTO

    $default  reduce using rule 29 ($@6)

    $@6  go to state 93


State 86

   33 repita: T_REPITA $@7 lista_comandos T_ATE . $@8 expr T_FIMREPITA

    $default  reduce using rule 32 ($@8)

    $@8  go to state 94


State 87

   39 expr: expr . T_VEZES expr
   40     | expr . T_DIV expr
   41     | expr . T_MAIS expr
   42     | expr . T_MENOS expr
   43     | expr . T_MAIOR expr
   44     | expr . T_MENOR expr
   45     | expr . T_IGUAL expr
   46     | expr . T_E expr
   47     | expr . T_OU expr
   56 posicaoAux: T_INICIO_VETOR expr . $@13 T_FIM_VETOR

    T_MAIS   shift, and go to state 56
    T_MENOS  shift, and go to state 57
    T_VEZES  shift, and go to state 58
    T_E      shift, and go to state 59
    T_OU     shift, and go to state 60
    T_MAIOR  shift, and go to state 61
    T_MENOR  shift, and go to state 62
    T_IGUAL  shift, and go to state 63
    T_DIV    shift, and go to state 64

    $default  reduce using rule 55 ($@13)

    $@13  go to state 95


State 88

   38 atribuicao: T_IDENTIF $@11 posicaoAux T_ATRIB . expr

    T_V        shift, and go to state 36
    T_F        shift, and go to state 37
    T_NAO      shift, and go to state 38
    T_ABRE     shift, and go to state 39
    T_IDENTIF  shift, and go to state 40
    T_NUMERO   shift, and go to state 41

    expr   go to state 96
    termo  go to state 43


State 89

   16 tamanho: T_INICIO_VETOR T_NUMERO $@3 T_FIM_VETOR .

    $default  reduce using rule 16 (tamanho)


State 90

   39 expr: expr . T_VEZES expr
   40     | expr . T_DIV expr
   41     | expr . T_MAIS expr
   42     | expr . T_MENOS expr
   43     | expr . T_MAIOR expr
   44     | expr . T_MENOR expr
   45     | expr . T_IGUAL expr
   46     | expr . T_E expr
   47     | expr . T_OU expr
   53 posicao: T_INICIO_VETOR expr . $@12 T_FIM_VETOR

    T_MAIS   shift, and go to state 56
    T_MENOS  shift, and go to state 57
    T_VEZES  shift, and go to state 58
    T_E      shift, and go to state 59
    T_OU     shift, and go to state 60
    T_MAIOR  shift, and go to state 61
    T_MENOR  shift, and go to state 62
    T_IGUAL  shift, and go to state 63
    T_DIV    shift, and go to state 64

    $default  reduce using rule 52 ($@12)

    $@12  go to state 97


State 91

   50 indice: T_INICIO_VETOR expr T_FIM_VETOR .

    $default  reduce using rule 50 (indice)


State 92

   36 selecao: T_SE expr T_ENTAO $@9 lista_comandos . T_SENAO $@10 lista_comandos T_FIMSE

    T_SENAO  shift, and go to state 98


State 93

   30 repeticao: T_ENQTO $@5 expr T_FACA $@6 . lista_comandos T_FIMENQTO

    T_LEIA     shift, and go to state 19
    T_ESCREVA  shift, and go to state 20
    T_SE       shift, and go to state 21
    T_ENQTO    shift, and go to state 22
    T_REPITA   shift, and go to state 23
    T_IDENTIF  shift, and go to state 24

    $default  reduce using rule 17 (lista_comandos)
